// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead two no pic and two - small 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<div
  className="S1"
>
  <div
    className="S1"
  >
    lead-1
  </div>
  <div
    className="S2"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="S1"
  >
    lead-2
  </div>
  <div
    className="S2"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="S1"
  >
    support-1
  </div>
  <div
    className="S2"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="S1"
  >
    support-2
  </div>
</div>
`;

exports[`2. lead two no pic and two - medium 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S3 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
  className="S3"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "paddingLeft": "10px",
      "paddingRight": "10px",
    }
  }
>
  <div
    className="S1"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="S1"
    >
      lead-1
    </div>
    <div
      className="S2"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      lead-2
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="S1"
    >
      support-1
    </div>
    <div
      className="S2"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      support-2
    </div>
  </div>
</div>
`;

exports[`3. lead two no pic and two - wide 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S3 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
  className="S3"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "paddingLeft": "10px",
      "paddingRight": "10px",
    }
  }
>
  <div
    className="S1"
    style={
      Object {
        "width": "42%",
      }
    }
  >
    <div
      className="S1"
    >
      lead-1
    </div>
    <div
      className="S2"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      lead-2
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "16%",
      }
    }
  >
    <div
      className="S1"
    >
      support-1
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "42%",
      }
    }
  >
    <div
      className="S1"
    >
      support-2
    </div>
  </div>
</div>
`;

exports[`4. lead two no pic and two - huge 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S3 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
  className="S3"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "paddingLeft": "10px",
      "paddingRight": "10px",
    }
  }
>
  <div
    className="S1"
    style={
      Object {
        "width": "36%",
      }
    }
  >
    <div
      className="S1"
    >
      lead-1
    </div>
    <div
      className="S2"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      lead-2
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "14%",
      }
    }
  >
    <div
      className="S1"
    >
      support-1
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "36%",
      }
    }
  >
    <div
      className="S1"
    >
      support-2
    </div>
  </div>
</div>
`;
